--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 ---
 
 I am Kourosh Rahimi, Ph.D. in Condensed Matter Physics, living in Tehran, Iran. I am currently doing hybrid computational and experimental research on two-dimensional materials and metal oxide nanostructures for energy storage, photocatalysis, and sensors.
