--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: post
 ---
-
+<div class="posts">
+  
 I am Kourosh Rahimi, Ph.D. in Condensed Matter Physics, living in Tehran, Iran. I am currently doing hybrid computational and experimental research on two-dimensional materials and metal oxide nanostructures for energy storage, photocatalysis, and sensors.
 
 Find me at:
@@ -11,3 +12,5 @@ Find me at:
 * [Medium](https://medium.com/@kourosh_rahimi)
 * [Virgool](https://virgool.io/@kourosh_rahimi)
 * [Twitter](https://www.twitter.com/rahimi_kourosh)
+  
+</div>
